Bug 153611 - Opening dialog via macro no longer works
Summary: Opening dialog via macro no longer works
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Macro
  Show dependency treegraph
 
Reported: 2023-02-14 13:51 UTC by Michael Weghorn
Modified: 2023-02-15 14:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-02-14 13:51:18 UTC
There is a regression that prevents at least the dialog for the macro from tdf#148109 to show up.

Steps to reproduce:

0. Set macro security to medium or low
1. open attachment 179026 [details] from bug 148109
2. click on the button

Actual result: no dialog

Expected result: A dialog shows up.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ce3d8f7e082afbc4a3139c723cb4533579523fe2
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2023-02-14 13:52:34 UTC
This is a regression, bibisected to:

commit ba4191ff0de05334ba32b53a09ad992710f03f9d
Author: Noel Grandin <noelgrandin@gmail.com>
Date:   Mon Jan 30 21:48:53 2023 +0200

    osl::Mutex->std::mutex in ImplEventAttacherManager
    
    Change-Id: Id8a4d2d75b1be8f23f6b1260a7a7727ab6bbd27b
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146368
    Tested-by: Jenkins
    Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>

Works again with a local revert of that commit.

Adding CC: to Noel Grandin
Comment 2 Stéphane Guillou (stragu) 2023-02-14 15:24:37 UTC
Thanks Michael!

Reproduced (with a follow-up hang when trying to close the window) with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: db6fbb0317fcb0a7babca9f71adbbb7c126b9e4e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But not in:

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-02-15 12:08:26 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/944d855f2fb4eb2a50c0e678c4fe51eb93e4e567

tdf#153611 Opening dialog via macro no longer works

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Weghorn 2023-02-15 14:29:12 UTC
Thanks! Fix verified with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8d0f4b849a8930ea592063f0f321564f1a87df2b
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

and

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8d0f4b849a8930ea592063f0f321564f1a87df2b
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded