tdf#153611 Opening dialog via macro no longer works

regression from
    commit ba4191ff0de05334ba32b53a09ad992710f03f9d
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Mon Jan 30 21:48:53 2023 +0200
    osl::Mutex->std::mutex in ImplEventAttacherManager

Change-Id: I4022c1e6b9c00d975eaa9e095994d7635aeb64b3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147047
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>